...
        android:layout_marginStart="16dp"
        android:text="Street Number* :"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/etAddressLine1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAddressLine1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
...
        android:layout_marginStart="16dp"
        android:text="Street Name* :"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/etAddressLine2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAddressLine2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
...
        android:layout_marginStart="16dp"
        android:text="Address Line 3:"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/etAddressLine3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAddressLine3"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
...
        android:layout_marginStart="16dp"
        android:text="City: *"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCityLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
...
        android:layout_marginStart="16dp"
        android:text="State/Province: *"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/etStateProvince"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvStateProvinceLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
...
        android:layout_marginStart="16dp"
        android:text="Country: *"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/etCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCountryLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
...
        android:layout_marginStart="16dp"
        android:text="Postal code: *"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/etAreaCodePostalCode"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAreaCodeLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
...
