<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_back"
    tools:context=".SaveUserProfileActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:gravity="center_vertical"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/textView_register_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textView_add_profile_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Click to Add Image.\nYour previous Picture is not Saved!"
            android:layout_below="@id/profile_pic_button"
            android:textAlignment="center"
            android:layout_marginBottom="50dp" />

        <ImageButton
            android:id="@+id/profile_pic_button"
            android:layout_centerHorizontal="true"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="70dp"
            android:src ="@drawable/ic_default_profile_icon"
            android:background="@drawable/circle"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:elevation="4dp"/>


        <TextView
            android:id="@+id/textView_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_pic_button"
            android:text="Full Name*"
            android:padding="6dp"
            android:textColor="#555555"
            android:textSize="20dp"
            android:layout_marginTop="40dp" />

        <EditText
            android:id="@+id/editText_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First and Last Name"
            android:inputType="textPersonName"
            android:textSize="16dp"
            android:padding="6dp"
            android:layout_below="@id/textView_register_name"
            android:background="@drawable/border"/>

        <TextView
            android:id="@+id/textView_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_register_name"
            android:text="Your Email*"
            android:textColor="#555555"
            android:textSize="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editText_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="e.g. johndoe@gmail.com"
            android:textSize="16dp"
            android:padding="6dp"
            android:layout_below="@id/textView_register_email"
            android:background="@drawable/border"/>

        <TextView
            android:id="@+id/textView_homepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_register_email"
            android:text="Homepage*"
            android:textColor="#555555"
            android:textSize="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editText_homepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:hint="www.yourwebsite.com"
            android:textSize="16dp"
            android:padding="6dp"
            android:layout_below="@id/textView_homepage"
            android:background="@drawable/border"/>

        <TextView
            android:id="@+id/textView_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_homepage"
            android:text="Mobile*"
            android:textColor="#555555"
            android:textSize="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editText_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:hint="xxx-xxx-xxxx"
            android:textSize="16dp"
            android:padding="6dp"
            android:layout_below="@id/textView_mobile"
            android:background="@drawable/border"/>


        <Button
            android:id="@+id/button_register"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_mobile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FFAE42"
            android:text="Done"
            android:textColor="@color/black"
            app:cornerRadius="20dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button_register"
            android:elevation="10dp"
            android:visibility="gone" />

    </RelativeLayout>
</ScrollView>


